--- a/app/views/homes/game_east.html.erb
+++ b/app/views/homes/game_east.html.erb
@@ -1,14 +1,26 @@
 <div class="game">
-  <h1>順位表</h1>
-  <h2>East</h2>
+  <h1>Ranking East</h1>
 
-  <div class="game--years">
-    <%= link_to "2018", game_east_path(year: :"2018"), id: "under_line", remote: true %>
-    <%= link_to "2019", game_east_path(year: :"2019"), id: "under_line", remote: true %>
-    <%= link_to "2020", game_east_path(year: :"2020"), id: "under_line", remote: true %>
-  </div>
+  <%= link_to game_east_path(year: :"2020") do %>
+    <div class="game--conference__east">
+      <p class="game--link__east">East</p>
+    </div>
+  <% end %>
+
+  <%= link_to game_west_path(year: :"2020") do %>
+    <div class="game--conference__west">
+      <p class="game--link__west">West</p>
+    </div>
+  <% end %>
 
   <table class="game--table">
+    <div class="game--years">
+      <ul class="game--years__tab">
+        <li><%= link_to "2018", game_east_path(year: :"2018"), remote: true %></li>
+        <li><%= link_to "2019", game_east_path(year: :"2019"), remote: true %></li>
+        <li><%= link_to "2020", game_east_path(year: :"2020"), remote: true %></li>
+      </ul>
+    </div>
     <thead>
       <tr>
         <th>順位</th>
