--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
-  <body data-turbolinks="false">
+  <body>
     <!--ヘッダー部分テンプレート-->
     <%= render "layouts/header" %>
+    <% if flash[:notice] %>
+      <p class="flash_notice"><%= flash[:notice] %></p>
+    <% elsif flash[:success] %>
+      <p class="flash_success"><%= flash[:success] %></p>
+    <% end %>
 
     <%= yield %>
 
@@ -36,6 +41,6 @@
 
     <!--フッター部分テンプレート-->
     <%= render "layouts/footer" %>
-    
+
   </body>
 </html>
