--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -366,6 +366,21 @@ input {
   }
 }
 
+.flash_notice{
+ width: 100%;
+ background-color: rgba(255,	0,	0, 0.7);
+ margin: 0;
+ padding-left: 20px;
+ color: white;
+}
+.flash_success{
+ width: 100%;
+ background-color: rgba(0,	255,	0, 0.7);
+ margin: 0;
+ padding-left: 10px;
+ color: white;
+}
+
 
 
 
