--- a/app/views/homes/game_west.html.erb
+++ b/app/views/homes/game_west.html.erb
@@ -1,9 +1,17 @@
 <div class="game">
   <h1>Ranking west</h1>
 
-  <div class="game--conference">
-    <%= render "homes/conference" %>
-  </div>
+  <%= link_to game_east_path(year: :"2020") do %>
+    <div class="game--conference__east">
+      <p class="game--link__east">East</p>
+    </div>
+  <% end %>
+
+  <%= link_to game_west_path(year: :"2020") do %>
+    <div class="game--conference__west">
+      <p class="game--link__west">West</p>
+    </div>
+  <% end %>
 
   <table class="game--table">
     <div class="game--years">
