--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
-  <body>
+  <body data-turbolinks="false">
     <!--ヘッダー部分テンプレート-->
     <%= render "layouts/header" %>
     <% if flash[:notice] %>
