--- a/app/views/homes/game_east.html.erb
+++ b/app/views/homes/game_east.html.erb
@@ -18,7 +18,7 @@
       <ul class="game--years__tab">
         <li><%= link_to "2018", game_east_path(year: :"2018"), remote: true %></li>
         <li><%= link_to "2019", game_east_path(year: :"2019"), remote: true %></li>
-        <li><%= link_to "2020", game_east_path(year: :"2020"), remote: true %></li>
+        <li class="active"><%= link_to "2020", game_east_path(year: :"2020"), remote: true %></li>
       </ul>
     </div>
     <thead>
