--- a/app/assets/stylesheets/facilities.scss
+++ b/app/assets/stylesheets/facilities.scss
@@ -95,7 +95,7 @@
   }
   &--calendar{
     width: 90%;
-    margin: 30px auto;
+    margin: 20px 50px 20px 20px;
   }
   &--rate-comment{
     display: flex;
@@ -112,7 +112,7 @@
     padding-left: 30px;
   }
   &--comment-form{
-   margin-left: 100px;
+   margin-left: 250px;
   }
   &--graph{
     padding: 15px;
