--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -91,66 +91,7 @@
       <div id="calendar"></div>
     </div>
     <div class="facility-show--function__detail">
-       <% if current_user %>
-        <div class="facility-show--new-reserve">
-          <h2 class="title_border">Reserve</h2>
-          <%= form_with(model: [@facility, @reserve_facility], local: true) do |f| %>
-            <div class="facility-show--details-reserve">
-              <div class="facility-show--details__title-reserve">
-                <%= f.label :開始 %>
-              </div>
-              <div class="facility-show--details__data-reserve">
-                <%= render "layouts/error_messages", model: @reserve_facility, attribute: :start %>
-                <%= f.datetime_field :start %><br>
-              </div>
-            </div>
-
-            <div class="facility-show--details-reserve">
-              <div class="facility-show--details__title-reserve">
-                <%= f.label :終了%>
-              </div>
-              <div class="facility-show--details__data-reserve">
-                <%= render "layouts/error_messages", model: @reserve_facility, attribute: :finish %>
-                <%= f.datetime_field :finish, minute_step: 30 %><br>
-              </div>
-            </div>
-
-            <div class="facility-show--details-reserve">
-              <div class="facility-show--details__title-reserve">
-                <%= f.label :人数 %>
-              </div>
-              <div class="facility-show--details__data-reserve">
-                <%= render "layouts/error_messages", model: @reserve_facility, attribute: :number %>
-                <%= f.select :number, [1,2,3,4,5,6,7,8,9,10], {}, prompt: "参加予定人数を選択してください" %>名<br>
-              </div>
-            </div>
-
-            <div class="facility-show--details-reserve">
-              <div class="facility-show--details__title-reserve">
-                <%= f.label :合流可否 %>
-              </div>
-              <div class="facility-show--details__data-reserve">
-                <%= render "layouts/error_messages", model: @reserve_facility, attribute: :with_friend %>
-                <%= f.radio_button :with_friend, :false %>
-                <%= f.label :with_friend, "参加不可", {value: :false, style: "display: inline;"} %>
-                <%= f.radio_button :with_friend, :true, class:"ml-5"%>
-                <%= f.label :with_friend, "一緒に参加可", {value: :true, style: "display: inline;"}%><br>
-                (※一緒に参加可にすると予約情報を閲覧した人があなたのMyPageに飛べるようになります。)
-              </div>
-            </div>
-
-            <div class="facility-show--details-reserve">
-              <div class="facility-show--details__title-reserve">
-                <%= f.label :コメント %>
-              </div>
-              <div class="facility-show--details__data-reserve">
-                <%= f.text_area :comment, placeholder: "コメントがあれば記載してください", size: "40x5" %><br>
-                <%= f.submit "予約する", class: "btn btn-success" %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
+       <%= render "facilities/reserve", facility: @facility, reserve_facility: @reserve_facility %>
     </div>
   </div>
   <div class="facility-show--rate-comment">
@@ -179,6 +120,6 @@
 
 
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKzm8Q1CsziI929WJM-dQQlwV1L3MpydY&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>&callback=initMap"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", type:"text/javascript"></script>
