--- a/app/views/facility_favorites/index.html.erb
+++ b/app/views/facility_favorites/index.html.erb
@@ -1,3 +1,11 @@
 <div class="facilities">
   <%= render "facilities/index", facilities: @facilities %>
+
+  <div class="facilities--map">
+    <div class="facilities--map__size" id="favorite_map"></div>
+  </div>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>&callback=initMap"></script>
+  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+  <script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", type:"text/javascript"></script>
 <div class="facilities">
