--- a/app/assets/stylesheets/relationships.scss
+++ b/app/assets/stylesheets/relationships.scss
@@ -65,7 +65,9 @@
     transform: translate(-50%, -50%);
   }
   &--following-info,
-  &--follower-info{
+  &--follower-info,
+  &--current_user-following-info,
+  &--current_user-follower-info{
     height: 500px;
     overflow: scroll;
     padding: 20px;
