--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -116,6 +116,7 @@
     top: 50%;
     left: 50%;
     height: 550px;
+    min-width: 500px;
     transform: translate(-50%, -50%);
     z-index: 102;
     background-color: white;
