--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,5 +1,7 @@
 $('.follow--following-info').html('<%= j(render "relationships/follow", users: @user_followings) %>');
 $('.follow--follower-info').html('<%= j(render "relationships/follow", users: @user_followers) %>');
+$('.follow--current_user-following-info').html('<%= j(render "relationships/follow", users: @current_user_followings) %>');
+$('.follow--current_user-follower-info').html('<%= j(render "relationships/follow", users: @current_user_followers) %>');
 $('.user-info--follow').html('<%= j(render "relationships/showpage", user: @user) %>');
 $('.follow_count').html('<%= j(render "relationships/follow_count", user: @user) %>');
 $('.follower_count').html('<%= j(render "relationships/follower_count", user: @user) %>');
