--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -66,7 +66,7 @@
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-  particlesJS.load('particles-js', 'assets/particles.json', function() {
+  particlesJS.load('particles-js', 'assets/particles-121e441504cc1943ac8ccfe9c7efc01e54fa9b8e5d3f82581219c40277067c24.json', function() {
     console.log('callback - particles.js config loaded');
   });
 </script>
