--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -3,6 +3,7 @@ $('.follow--follower-info').html('<%= j(render "relationships/follow", users: @u
 $('.follow--current_user-following-info').html('<%= j(render "relationships/follow", users: @current_user_followings) %>');
 $('.follow--current_user-follower-info').html('<%= j(render "relationships/follow", users: @current_user_followers) %>');
 $('.user-info--follow').html('<%= j(render "relationships/showpage", user: @user) %>');
+$('.chats').html('<%= j(render "relationships/chats", user: @user, messages: @messages, message: @message) %>');
 $('.follow_count').html('<%= j(render "relationships/follow_count", user: @user) %>');
 $('.follower_count').html('<%= j(render "relationships/follower_count", user: @user) %>');
 $('.current_user_follow_count').html('<%= j(render "relationships/follow_count", user: current_user) %>');
