--- a/app/views/facility_comments/create.js.erb
+++ b/app/views/facility_comments/create.js.erb
@@ -1,3 +1,3 @@
 $('#facility-show--comments').html('<%= j(render "facility_comments/index", facility_comments: @facility_comments) %>');
 $('#facility-show--form').html('<%= j(render "facility_comments/form", facility: @facility, comment: @comment_new, facility_comments: @facility_comments) %>');
-$('#facility-show--rate').html('<%= j(render "facility_comments/graph", facility_comments: @facility_comments, data: @data) %>');
+$('#facility-show--rate').html('<%= j(render "facility_comments/graph", facility_comments: @facility_comments, data5: @data5, data4: @data4, data3: @data3, data2: @data2, data1: @data1) %>');
