--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,7 +1,7 @@
 <% users.each do |user| %>
   <div class="follow--detail">
     <%= link_to user_path(user), class: "follow--user" do %>
-      <%= attachment_image_tag(user, :user_image, :fill, 50, 50, fallback: "no_image.jpg") %>
+      <%= attachment_image_tag(user, :user_image, fallback: "no_image.jpg") %>
       <%= user.name %>
     <% end %>
     <%= render "relationships/relationship", user: user %>
