--- a/app/views/relationships/_chats.html.erb
+++ b/app/views/relationships/_chats.html.erb
@@ -25,6 +25,6 @@
     </div>
   <% else %>
     <div class="chats--background" id="modan_close"></div>
-    <div class="chats--messages">
+    <div class="chats--messages"></div>
   <% end %>
 <% end %>
