--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,10 +1,10 @@
-$('.follow--following-info').html('<%= j(render "relationships/follow", users: @user_followings) %>');
-$('.follow--follower-info').html('<%= j(render "relationships/follow", users: @user_followers) %>');
-$('.follow--current_user-following-info').html('<%= j(render "relationships/follow", users: @current_user_followings) %>');
-$('.follow--current_user-follower-info').html('<%= j(render "relationships/follow", users: @current_user_followers) %>');
+$('.follow--following-info').html('<%= j(render "relationships/follow", users: @user_followings, current_page_user: @current_page_id) %>');
+$('.follow--follower-info').html('<%= j(render "relationships/follow", users: @user_followers, current_page_user: @current_page_id) %>');
+$('.follow--current_user-following-info').html('<%= j(render "relationships/follow", users: @current_user_followings, current_page_user: @current_page_id) %>');
+$('.follow--current_user-follower-info').html('<%= j(render "relationships/follow", users: @current_user_followers, current_page_user: @current_page_id) %>');
 $('.user-info--follow').html('<%= j(render "relationships/showpage", user: @user) %>');
 $('.chats').html('<%= j(render "relationships/chats", user: @user, messages: @messages, message: @message) %>');
-$('.follow_count').html('<%= j(render "relationships/follow_count", user: @user) %>');
-$('.follower_count').html('<%= j(render "relationships/follower_count", user: @user) %>');
-$('.current_user_follow_count').html('<%= j(render "relationships/follow_count", user: current_user) %>');
-$('.current_user_follower_count').html('<%= j(render "relationships/follower_count", user: current_user) %>');
+$('.follow_count').html('<%= render "relationships/follow_count", user: @user %>');
+$('.follower_count').html('<%= render "relationships/follower_count", user: @user %>');
+$('.current_user_follow_count').html('<%= render "relationships/follow_count", user: current_user %>');
+$('.current_user_follower_count').html('<%= render "relationships/follower_count", user: current_user %>');
