--- a/app/views/relationships/_relationship.html.erb
+++ b/app/views/relationships/_relationship.html.erb
@@ -1,7 +1,7 @@
 <% if user != current_user %>
   <% if current_user.following?(user) %>
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, remote: true, class:"btn btn-success" %>
+    <%= link_to "フォローを外す", user_relationships_path(user.id, current_page_id: current_page_user), method: :delete, remote: true, class:"btn btn-success" %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, class:"btn btn-success" %>
+    <%= link_to "フォローする", user_relationships_path(user.id, current_page_id: current_page_user), method: :post, remote: true, class:"btn btn-success" %>
   <% end %>
 <% end %>
