--- a/app/views/relationships/_showpage.html.erb
+++ b/app/views/relationships/_showpage.html.erb
@@ -1,6 +1,6 @@
   <% if current_user.following?(user) %>
   　<a id="modan_open">Chatsを始める</a>
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success", remote: true %>
+    <%= link_to "フォローを外す", user_relationships_path(user.id, current_page_id: user.id), method: :delete, class:"btn btn-success", remote: true %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success", remote: true %>
+    <%= link_to "フォローする", user_relationships_path(user.id, current_page_id: user.id), method: :post, class:"btn btn-success", remote: true %>
   <% end %>
