--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -187,7 +187,7 @@
       content: "";
       display: block;
       height: 10px;
-      background: linear-gradient(to right, #0000DD, transparent);
+      background: linear-gradient(to right, orange, transparent);
     }
   }
 }
