--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
         <i class="fas fa-user fa-stack-1x"></i>
       </span>
     </p>
-    <h2>Signe Up</h2>
+    <h2>Sign Up</h2>
   </div>
 
   <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
