--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -43,7 +43,7 @@
     <div class="main-contents--text">
       <h1>バスケ情報</h1>
       <p>
-        NBA試合結果やバスケに関する情報をいち早く確認することができます<br>
+        NBA試合結果やバスケに関する情報をいち早く確認することができます!<br>
       </p>
       <ul class="slider">
         <%= render "homes/news_info", articles: @articles %>
