AI LABEL_DETECTION

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BaskeNav</title>
+    <link rel="icon" type="image/png" href="assets/favicon-128.png" sizes="128x128" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
