--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -51,6 +51,14 @@
         width: 230px;
         height: 120px;
         box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+        margin-bottom: 10px;
+      }
+      span{
+        background-color: #2C7CFF;
+        color: white;
+        border-radius: 10px;
+        padding: 0 5px;
+        margin-right: 5px;
       }
     }
   }
@@ -121,6 +129,15 @@
   &--comments{
     padding: 30px 0 30px 50px;
     width: 500px;
+  }
+  &--tag-box{
+   span{
+     background-color: #2C7CFF;
+     color: white;
+     border-radius: 10px;
+     padding: 0 5px;
+     margin: 5px;
+   }
   }
 }
 
