--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -46,7 +46,11 @@
         NBA試合結果やバスケに関する情報をいち早く確認することができます!<br>
       </p>
       <ul class="slider">
-        <%= render "homes/news_info", articles: @articles %>
+        <% if @articles %>
+          <%= render "homes/news_info", articles: @articles %>
+        <% else %>
+          <%= @error %>
+        <% end %>
       </ul>
     </div>
   </div>
