--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -58,7 +58,8 @@
         color: white;
         border-radius: 10px;
         padding: 0 5px;
-        margin-right: 5px;
+        margin: 5px 0;
+        display: inline-block;
       }
     }
   }
@@ -137,6 +138,7 @@
      border-radius: 10px;
      padding: 0 5px;
      margin: 5px;
+     display: inline-block;
    }
   }
 }
