--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -63,7 +63,44 @@
       }
     }
   }
+  &--image__background{
+    display: none;
+    width: 100vw;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &--image__detail{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    img{
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+      padding: 11px;
+      background-color: #FFFFFF;
+      box-shadow: 0 3px 18px -4px rgba(0, 0, 0, 0.8);
+    }
+  }
+  &--tags{
+    background-color: rgba(0,0,0,0.6);
+    transition: all 1.6s ease;
+    position: relative;
+    top: 0;
+    left: 0;
+    color: white;
+    text-align: right;
+    span{
+      margin: 0 10px;
+    }
+  }
 }
+
 
 // 投稿詳細ページレイアウト
 .post-show{
@@ -133,7 +170,7 @@
   }
   &--tag-box{
    span{
-     background-color: #2C7CFF;
+     background-color: rgba(0,0,0,0.7);
      color: white;
      border-radius: 10px;
      padding: 0 5px;
