--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -182,7 +182,7 @@
 
 // 投稿一覧画面
 .Myposts{
- height: 100vh;
+ height: 720px;
  background-image: image_url('renga.jpg');
  background-size: cover;
  &--posts{
