--- a/app/views/facility_comments/_index.html.erb
+++ b/app/views/facility_comments/_index.html.erb
@@ -3,7 +3,7 @@
     <div class="facility-comments--view">
       <div class="facility-comments--detail">
         <%= link_to user_path(facility_comment.user) do %>
-          <%= attachment_image_tag(facility_comment.user, :user_image, :fill, 100, 100, fallback: "no_image.jpg") %>
+          <%= attachment_image_tag(facility_comment.user, :user_image, fallback: "no_image.jpg") %>
           <%= facility_comment.user.name %>
         <% end %>
       </div>
