--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .posts{
-  width: 100%;
+  width: 1100px;
   height: 550px;
   position: relative;
   &--title{
