--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,7 +66,7 @@
   background-image: image_url('renga.jpg');
   background-size: cover;
   &--posts{
-    width: 60%;
+    width: 1100px;
     margin: 60px 0 0 50px;
   }
   &--trash-box{
