--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .posts{
-  width: 1100px;
+  width: 900px;
   height: 550px;
   position: relative;
   &--title{
@@ -48,7 +48,7 @@
     &__photo{
       margin: 40px 50px 40px 30px;
       img{
-        width: 230px;
+        width: 120%;
         height: 120px;
         box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
         margin-bottom: 10px;
