--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
  }
 
  @mixin nav-line($position, $deg) {
-  width: 2px;
+   width: 2px;
    height: 85px;
    content: '';
    position: absolute;
@@ -110,6 +110,7 @@ header{
    color: white;
    font-size: 15px;
    position: absolute;
+   top: 10px;
    right: 10px;
    border: 1px solid white;
    padding: 0 5px;
@@ -308,64 +309,7 @@ input {
  border-left: solid 5px #7db4e6;
 }
 
-// ユーザー検索のモーダルウィンドウ
-.search{
-  display: none;
-  height: 100vh;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  
-  &--background{
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    position: relative;
-  }
-  &--header{
-    padding: 10px ;
-    text-align: center;
-    h1{
-      position: relative;
-    }
-    h1:after{
-      content: "";
-      border: 1px solid blue;
-      width: 80px;
-      height: 1px;
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translate(-50%);
-    }
-  }
-  &--member{
-    width: 500px;
-    height: 600px;
-    background-color: white;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  &--users{
-   margin: 30px;
-   padding: 10px;
-   overflow: scroll;
-   &__detail{
-    position: relative;
-    width: 100%;
-    border-bottom: 1px solid black;
-    margin-top: 10px;
-   }
-   &__link{
-     position: absolute;
-     right: 0;
-     top: 0px;
-   }
-  }
-}
+
 
 .flash_notice{
  width: 100%;
@@ -375,13 +319,25 @@ input {
  color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
+/* タブレット横置きサイズ（1024px）以下の際に適用される設定 */
+@media screen and (max-width: 1440px) {
+  .main-contents--info h1{
+    top: 550px;
+    left: 150px;
+  }
+  .news--articles__item{
+    max-height: 400px;
+  }
+}
+/* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
+@media screen and (max-width: 1024px) {
+  .main-contents--info h1{
+    top: 560px;
+    font-size: 45px;
+    transform: rotate(-11deg);
+    left: 90px;
+  }
+  .news--articles__item{
+    max-height: 400px;
+  }
+}
