--- a/app/views/homes/game.html.erb
+++ b/app/views/homes/game.html.erb
@@ -33,6 +33,7 @@
       </tr>
     </thead>
     <tbody class="game--rank">
+      <!--順位表-->
       <%= render "homes/game", team_rank: @team_rank %>
     </tbody>
   </table>
