--- a/app/views/facility_comments/_graph.html.erb
+++ b/app/views/facility_comments/_graph.html.erb
@@ -30,7 +30,7 @@
       	datasets: [
               {
                 label: ["評価割合"],
-                data: [<%= data5 %>,<%= data4 %>,<%= data3 %>,<%= data2 %>,<%= data1 %>],
+                data: <%= @graph %>,
                 backgroundColor: "orange"
               }
             ]
