--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
   </div>
 </div>
 
+<!--フォローユーザーのモーダルウィンドウ-->
 <div class="user-show--following">
   <div class="follow">
     <div class="follow--background modan_close1 modan_close2"></div>
@@ -35,6 +36,7 @@
   </div>
 </div>
 
+<!--フォロワーユーザーのモーダルウィンドウ-->
 <div class="user-show--follower">
   <div class="follow">
     <div class="follow--background modan_close1 modan_close2"></div>
